# QubitForge

./: .clang-format  .clang-tidy  CMakeLists.txt  check_code.sh
include/: deutsch_jozsa.h  grover.h  logger.h  quantum_circuit.h  quantum_gate.h  quantum_register.h  qubit.h  shor.h
src/: main.cpp
src/algorithms/: deutsch_jozsa.cpp  grover.cpp  shor.cpp
src/circuit/: quantum_circuit.cpp
src/gates/: quantum_gate.cpp
src/logger/: logger.cpp
src/qubit/: qubit.cpp
src/register/: quantum_register.cpp
tests/: CMakeLists.txt  log_capture.h  test_circuit.cpp  test_deutsch_jozsa.cpp  test_gates.cpp  test_grover.cpp  test_integration.cpp  test_quantum_circuit.cpp  test_quantum_gate.cpp  test_quantum_register.cpp  test_qubit.cpp  test_shor.cpp
